--- a/apps/user/tsconfig.app.json
+++ b/apps/user/tsconfig.app.json
@@ -10,5 +10,5 @@
     "../../node_modules/@nrwl/react/typings/image.d.ts"
   ],
   "exclude": ["jest.config.ts","**/*.spec.ts", "**/*.test.ts", "**/*.spec.tsx", "**/*.test.tsx", "**/*.spec.js", "**/*.test.js", "**/*.spec.jsx", "**/*.test.jsx"],
-  "include": ["**/*.js", "**/*.jsx", "**/*.ts", "**/*.tsx", "../../libs/auth/src/lib/apis/user.interface.ts"]
+  "include": ["**/*.js", "**/*.jsx", "**/*.ts", "**/*.tsx"]
 }
