--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "@types/node": "18.7.18",
     "@types/react": "18.0.20",
     "@types/react-dom": "18.0.6",
+    "@types/react-is": "17.0.3",
     "@types/react-router-dom": "5.3.3",
+    "@types/styled-components": "5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
     "babel-jest": "28.1.1",
+    "babel-plugin-styled-components": "1.10.7",
     "cypress": "^10.7.0",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
@@ -41,12 +44,15 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.12",
     "core-js": "^3.6.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-is": "18.2.0",
     "react-router-dom": "6.4.1",
     "regenerator-runtime": "0.13.7",
+    "styled-components": "5.3.5",
     "tslib": "^2.3.0",
     "typescript": "^4.8.4"
   }
