--- a/apps/feed/project.json
+++ b/apps/feed/project.json
@@ -26,7 +26,7 @@
           "apps/feed/src/styles.scss"
         ],
         "scripts": [],
-        "webpackConfig": "@nrwl/react/plugins/webpack"
+        "webpackConfig": "apps/feed/webpack.config.prod.js"
       },
       "configurations": {
         "development": {
