--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build:all": "bash ./tools/build-all.sh",
+    "serve:all": "bash ./tools/serve-all.sh"
+
   },
   "author": "",
   "license": "ISC",
